# zetavm

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  Dockerfile-32  LICENSE  README.md  appveyor.yml  benchmark.py  configure  configure.ac  espresso.sh  makefile  makefile.in  plush.sh  push_pkg.sh  run_tests.sh  scheme.sh  test.zim
benchmarks/: audio_test.pls  draw_font.pls  fcalls_10m.zim  fib.pls  fib29.pls  fib36.pls  fib36.py  fib36.zim  func_audio.pls  get_field_1m.pls  img_fill.pls  import_10m.zim  incr_field_1m.pls  loop_cnt.pls  loop_cnt_100m.pls  loop_cnt_100m.zim  loop_cnt_10m.zim  plush_parser.pls  plush_parser.zim  rand_floats.pls  rand_floats_1m.pls  saw_wave.pls  set_field_1m.pls  sine_wave.pls  sqr_wave.pls  zsdf.pls
docs/: bootstrap.md  contributing.md  design.md  exec_model.md  new_language.md  packages.md  plush_guide.md  roadmap.md
espresso/: e_codegen.py  e_error.py  e_input.py  e_nodes.py  e_operators.py  e_parser.py  error.py  input.py  main.py  nodes.py  parser.py  runtime.espr
examples/: GOOG.csv  audio_render.pls  audio_test.pls  click_grid.pls  csv_parsing.pls  game.pls  graphics.pls  line_count.pls  music.pls  zeta_logo.pls
javascript/: lexer.cpp  parser.h
js/: lexer.h  main.cpp
plush/: array.pls  codegen.cpp  codegen.h  main.cpp  map.pls  math.pls  parser.cpp  parser.h  parser.pls  parsing.pls  plush_pkg.pls  runtime.pls  string.pls
scheme/: codegen.cpp  codegen.h  main.cpp  parser.cpp  parser.h  runtime.zim
tests/espresso/: test.espr
tests/examples/: test_harness.pls
tests/gc/: arrays.js  arrays.pls  bigloop.js  closures.js  collect.pls  objects.js  objects.pls  objext.js  objext.pls  ret.js  ret.pls  strcat.js
tests/plush/: a_lot_of_strings  array.pls  array_push.pls  assert.pls  call_site_pos.pls  catch_import_missing.pls  circular1.pls  circular2.pls  circular3.pls  cmdline_args.pls  exceptions.pls  fib.pls  floats.pls  for_loop.pls  for_loop_break.pls  for_loop_cont.pls  for_loop_sum.pls  fun_locals.pls  gradient.pls  identfn.pls  import.pls  line_count.pls  load.pls  map.pls  math.pls  method_calls.pls  (+26 more)
vm/: Escape Function.cpp  core.cpp  core.h  interp.cpp  interp.h  main.cpp  opt_parser.h  packages.cpp  packages.h  parser.cpp  parser.h  runtime.cpp  runtime.h  serialize.cpp  serialize.h  util.h
(+26 files in other folders)
